# jobslop

./: .gitignore  .impeccable.md  CONTRIBUTING.md  README.md  blueprint.md  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
config/: filters.yaml  vc_boards.yaml
db/: migrate.py  schema.sql
docs/superpowers/plans/: 2026-03-21-database-website.md
docs/superpowers/specs/: 2026-03-21-database-website-design.md  2026-03-21-resume-matching-design.md
scrapers/: __init__.py  ashby.py  base.py  consider.py  getro.py  greenhouse.py  levelsfyi.py  lever.py  simplify.py  workday.py
scripts/: aggregate.py  deduplicate.py  generate_readme.py  migrate_turso_to_d1.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/resume-analyze/: route.ts
web/src/app/components/: FilterBar.tsx  FilterDropdown.tsx  JobRow.tsx  JobTable.tsx  PageClient.tsx  Pagination.tsx  ResumeBar.tsx
web/src/lib/: db.ts  queries.ts  types.ts
